--- a/Sparkify.ipynb
+++ b/Sparkify.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,13 +31,13 @@
     "from pyspark.ml.feature import OneHotEncoder, VectorAssembler, StandardScaler, StringIndexer\n",
     "from pyspark.ml import Pipeline, Transformer\n",
     "from pyspark.ml.classification import DecisionTreeClassifier, GBTClassifier, LogisticRegression, RandomForestClassifier\n",
-    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
+    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator, BinaryClassificationEvaluator\n",
     "from pyspark.sql.types import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,6 +1273,8 @@
     "\n",
     "    def _transform(self, df: DataFrame) -> DataFrame:\n",
     "        return df.where(~f.col(\"auth\").isin([\"Logged Out\",\"Guest\"]))\n",
+    "    def copy(self, extra=None):\n",
+    "        return FilterInvalidUser()\n",
     "    \n",
     "class CalculateDate(Transformer):\n",
     "    def __init__(self):\n",
@@ -1291,7 +1293,9 @@
     "        return df\n",
     "    \n",
     "    def _transform(self, df: DataFrame) -> DataFrame:\n",
-    "        return self._fit(df)\n",
+    "        return self._fit(df)                              \n",
+    "    def copy(self, extra=None):\n",
+    "        return CalculateDate()\n",
     "\n",
     "class GenerateAggregatedFeatures(Transformer):\n",
     "    def __init__(self, aggregate_window_in_days=1):\n",
@@ -1311,7 +1315,9 @@
     "    \n",
     "    def _transform(self, df: DataFrame) -> DataFrame:\n",
     "        return self._fit(df)\n",
-    "\n",
+    "    def copy(self, extra=None):\n",
+    "        return GenerateAggregatedFeatures()\n",
+    "    \n",
     "def get_churn_flag(df):\n",
     "    is_churn_label = (\n",
     "        df\n",
@@ -1332,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -1375,11 +1381,14 @@
     "    ], outputCol=\"features\")\n",
     "    label_indexer = StringIndexer(inputCol=label_column, outputCol=\"indexed_label\")\n",
     "    if model == \"GBTClassifier\":\n",
-    "        model = GBTClassifier(labelCol=\"indexed_label\", featuresCol=\"features\")\n",
+    "        model = GBTClassifier(labelCol=\"indexed_label\", featuresCol=\"features\",\n",
+    "                              maxBins=32, maxDepth=5)\n",
     "    elif model == \"RandomForestClassifier\":\n",
-    "        model = RandomForestClassifier(labelCol=\"indexed_label\", featuresCol=\"features\")\n",
+    "        model = RandomForestClassifier(labelCol=\"indexed_label\", featuresCol=\"features\",\n",
+    "                                       numTrees=20, maxDepth=5)\n",
     "    elif model == \"DecisionTreeClassifier\":\n",
-    "        model = DecisionTreeClassifier(labelCol=\"indexed_label\", featuresCol=\"features\")\n",
+    "        model = DecisionTreeClassifier(labelCol=\"indexed_label\", featuresCol=\"features\",\n",
+    "                                      maxBins=32, maxDepth=5)\n",
     "        \n",
     "\n",
     "\n",
@@ -1400,7 +1409,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best GBTClassifier Model Parameters:\n",
+      "cacheNodeIds: False\n",
+      "checkpointInterval: 10\n",
+      "featureSubsetStrategy: all\n",
+      "featuresCol: features\n",
+      "labelCol: indexed_label\n",
+      "lossType: logistic\n",
+      "maxBins: 32\n",
+      "maxDepth: 5\n",
+      "maxIter: 20\n",
+      "maxMemoryInMB: 256\n",
+      "minInfoGain: 0.0\n",
+      "minInstancesPerNode: 1\n",
+      "predictionCol: prediction\n",
+      "seed: 7109716244934303300\n",
+      "stepSize: 0.1\n",
+      "subsamplingRate: 1.0\n",
+      "Best RandomForestClassifier Model Parameters:\n",
+      "cacheNodeIds: False\n",
+      "checkpointInterval: 10\n",
+      "featureSubsetStrategy: auto\n",
+      "featuresCol: features\n",
+      "impurity: gini\n",
+      "labelCol: indexed_label\n",
+      "maxBins: 32\n",
+      "maxDepth: 5\n",
+      "maxMemoryInMB: 256\n",
+      "minInfoGain: 0.0\n",
+      "minInstancesPerNode: 1\n",
+      "numTrees: 20\n",
+      "predictionCol: prediction\n",
+      "probabilityCol: probability\n",
+      "rawPredictionCol: rawPrediction\n",
+      "seed: -1969172582603470203\n",
+      "subsamplingRate: 1.0\n",
+      "Best DecisionTreeClassifier Model Parameters:\n",
+      "cacheNodeIds: False\n",
+      "checkpointInterval: 10\n",
+      "featuresCol: features\n",
+      "impurity: gini\n",
+      "labelCol: indexed_label\n",
+      "maxBins: 32\n",
+      "maxDepth: 5\n",
+      "maxMemoryInMB: 256\n",
+      "minInfoGain: 0.0\n",
+      "minInstancesPerNode: 1\n",
+      "predictionCol: prediction\n",
+      "probabilityCol: probability\n",
+      "rawPredictionCol: rawPrediction\n",
+      "seed: 8180204164967723972\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.ml.classification import GBTClassifier, RandomForestClassifier, DecisionTreeClassifier\n",
+    "from pyspark.ml.feature import StringIndexer, OneHotEncoder, VectorAssembler\n",
+    "from pyspark.ml.tuning import ParamGridBuilder, CrossValidator\n",
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "# Define the models and their respective parameter grids for grid search\n",
+    "models_and_params = {\n",
+    "    \"GBTClassifier\": (GBTClassifier(), ParamGridBuilder()\n",
+    "                      .addGrid(GBTClassifier.maxDepth, [5, 10])\n",
+    "                      .addGrid(GBTClassifier.maxBins, [32, 64])\n",
+    "                      .build()),\n",
+    "    \"RandomForestClassifier\": (RandomForestClassifier(), ParamGridBuilder()\n",
+    "                               .addGrid(RandomForestClassifier.maxDepth, [5, 10])\n",
+    "                               .addGrid(RandomForestClassifier.numTrees, [20, 50])\n",
+    "                               .build()),\n",
+    "    \"DecisionTreeClassifier\": (DecisionTreeClassifier(), ParamGridBuilder()\n",
+    "                               .addGrid(DecisionTreeClassifier.maxDepth, [5, 10])\n",
+    "                               .addGrid(DecisionTreeClassifier.maxBins, [32, 64])\n",
+    "                               .build())\n",
+    "}\n",
+    "\n",
+    "# Iterate through the models and parameter grids\n",
+    "for model_name, (base_model, param_grid) in models_and_params.items():\n",
+    "    # Build the pipeline with the current model\n",
+    "    pipeline = pipeline_builder(model=model_name)\n",
+    "    \n",
+    "    # Create a cross-validator with the pipeline and parameter grid\n",
+    "    crossval = CrossValidator(estimator=pipeline,\n",
+    "                              estimatorParamMaps=param_grid,\n",
+    "                              evaluator=BinaryClassificationEvaluator(labelCol=\"indexed_label\"),\n",
+    "                              numFolds=3)\n",
+    "    \n",
+    "    # Fit the cross-validator to the data\n",
+    "    cv_model = crossval.fit(trainingData)  # You need to replace 'train_data' with your actual training data\n",
+    "    \n",
+    "    # Get the best model from the cross-validation results\n",
+    "    best_model = cv_model.bestModel\n",
+    "    \n",
+    "    # Print the best model's parameters\n",
+    "    print(f\"Best {model_name} Model Parameters:\")\n",
+    "    for param, value in best_model.stages[-1].extractParamMap().items():\n",
+    "        print(f\"{param.name}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1409,13 +1526,13 @@
      "text": [
       "==================================================\n",
       "Model: DecisionTreeClassifier\n",
-      "F1 Score: 0.7890650617242865\n",
+      "F1 Score: 0.7836139160032399\n",
       "==================================================\n",
       "Model: RandomForestClassifier\n",
-      "F1 Score: 0.7800159477800256\n",
+      "F1 Score: 0.7708081952784056\n",
       "==================================================\n",
       "Model: GBTClassifier\n",
-      "F1 Score: 0.8041381259320414\n"
+      "F1 Score: 0.7944160398721065\n"
      ]
     }
    ],
